--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,8 +4,8 @@
     <div class="col-md-5">
       <h2>
         <!-- Call helper function with triple brackets to render the emoji span as HTML -->
-        {{{get_emoji}}}
-        <a href="/project/{{project.id}}">{{project.name}}</a>
+
+        <a href="/project/{{event.id}}">{{event.name}}</a>
       </h2>
       <p>
         <span for="img" aria-label="money">💲</span>
