updated seeds and handlebars

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,12 +8,11 @@
         <a href="/event/{{event.id}}">{{event.name}}</a>
       </h2>
       <p>
-        <span for="img" aria-label="money">💲</span>
-        needed!
+        {{event.date}}
       </p>
-      <p>Created by
+      <p>Organized by
         {{user.name}}
-        on
+        
        
     </div>
     <div class="col-md-7">
