--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -20,7 +20,7 @@
 </div>    
 <div class="cards">  
   <div class="col-md-6">
-    <h2>Signup</h2>
+    <h2>Sign Up Here!</h2>
 
     <form class="form signup-form">
       <div class="form-group">
@@ -42,4 +42,4 @@
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/public/js/login.js"></script>
