implemented format date helper

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -5,7 +5,7 @@
   <a href="./api/event/{{event.id}}">{{event.name}}</a>
   </h2>
   <p>{{event.description}}</p>
-  <p>{{date}}test</p>
+  <p>{{ format_date event.date}}test</p>
   <p>{{time}}</p>
    <p>{{location}}test</p>
 
