--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/public/css/style.css">
+<link rel="stylesheet" href="/css/style.css">
 <div class="cards">
   <div class="row">
     <div class="col-md-6">
@@ -43,4 +43,4 @@
   </div>
 </div>
 
-<script src="/public/js/login.js"></script>
+<script src="/js/login.js"></script>
