added styling on homepage

--- a/views/Profile.handlebars
+++ b/views/Profile.handlebars
@@ -10,7 +10,7 @@
 
     <form class="form new-event-form">
       <div class="form-group">
-        <label for="event-name">event name:</label>
+        <label for="event-name">Event name:</label>
         <input
           class="form-input"
           type="text"
@@ -19,7 +19,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-location">location of event ($):</label>
+        <label for="event-location">Location of event ($):</label>
         <input
           class="form-input"
           type="string"
@@ -28,7 +28,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-desc">description:</label>
+        <label for="event-desc">Description:</label>
         <textarea
           class="form-input"
           id="event-desc"
