--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
- background-color: aquamarine;
+  background-color: aquamarine;
   background-size: cover;
     background-image: url(images/eventimage.jpeg);
 }
@@ -17,7 +17,7 @@ h2 {
   font-style:oblique;
   font-size: xx-large;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  
+  text-decoration-line: underline;
 }
 
 .header {
@@ -34,13 +34,9 @@ h2 {
   border-radius: 30px;
   margin-top: 5px
   font-size: 100%;
-  
   border-color: tomato;
   padding: 10px;
   margin left:  5px;
-  
-    
-
 }
 
 .form-group {
@@ -57,9 +53,26 @@ h3 {
   font-weight: 600;
   font-size: xx-large;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+
 }
 
 .form-input {
   font-size: larger;
   border-radius: 7px;
+}
+
+p {
+  font-size: 20px;
+}
+
+button {
+  font-size: 15px;
+  font-weight: bold;
+  background-color: lightgreen;
+  border-radius: 10px;
+}
+
+label {
+  font-size: 20px;
+  font-weight: bold;
 }
