--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,16 +7,16 @@
 body {
   background-color: aquamarine;
   background-size: cover;
-    background-image: url(images/eventimage.jpeg);
+  background-image: url(images/eventimage.jpeg);
 }
 
 h2 {
   padding: 1rem;
   margin-left: 1rem;
   text-align: left;
-  font-style:oblique;
+  font-style: oblique;
   font-size: xx-large;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration-line: underline;
 }
 
@@ -25,26 +25,25 @@ h2 {
   text-align: ;
 }
 
-.form-group{
-  text-align:left;
+.form-group {
+  text-align: left;
   justify-content: center;
   height: 70%;
   flex-direction: column;
   border-width: 1.3rem;
   border-radius: 30px;
-  margin-top: 5px
+  margin-top: 5px;
   font-size: 100%;
   border-color: tomato;
   padding: 10px;
-  margin left:  5px;
+  margin-left: 5px;
 }
 
 .form-group {
   border-radius: 30px;
   margin-right: 10px;
   text-align: justify;
-  padding-left: 70PX;
-
+  padding-left: 70px;
 }
 
 h3 {
@@ -52,8 +51,7 @@ h3 {
   font-style: normal;
   font-weight: 600;
   font-size: xx-large;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .form-input {
