--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,9 +20,13 @@ h2 {
   text-decoration-line: underline;
 }
 
+a {
+  display: none;
+}
+
 .header {
   padding-left: 1rem;
-  text-align: ;
+  text-align: center;
 }
 
 .form-group {
