--- a/views/Profile.handlebars
+++ b/views/Profile.handlebars
@@ -6,11 +6,11 @@
 
 <div class="row mt-4">
   <div class="col-md-6">
-    <h3>Share your Event!:</h3>
+    <h3>Share your Event!</h3>
 
     <form class="form new-event-form">
       <div class="form-group">
-        <label for="event-name">Event name:</label>
+        <label for="event-name">Event Name?</label>
         <input
           class="form-input"
           type="text"
@@ -19,7 +19,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-location">Location of event ($):</label>
+        <label for="event-location">Event Location?</label>
         <input
           class="form-input"
           type="string"
@@ -28,7 +28,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-desc">Description:</label>
+        <label for="event-desc">Description</label>
         <textarea
           class="form-input"
           id="event-desc"
