--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,14 +1,16 @@
-
+<header> Current Events in Your Area!</header>
 {{#each events as |event|}}
+
 <div class="cards">
+  
   <h2>
   {{name}}
   </h2>
   <p>{{description}}</p>
-  <p>{{date}}</p>
-  <p>{{time}}</p>
+  <p>{{formatted_date date}}</p>
+  <p>{{ formatted_time time}}</p>
    <p>{{location}}</p>
-
+<p>Organized by {{user.name}}</p>
   
   </p>
   <p>
