--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,12 @@
   padding: 0;
   margin: 0;
 }
+.no-button {
+  display: flex;
+  padding: 12px;
+  justify-content: left;
+  cursor: pointer;
+}
 header {
   padding: 1rem;
   margin-left: 1rem;
@@ -66,8 +72,11 @@ h3 {
 }
 
 .form-input {
+  display: flex;
+  justify-content: center;
   font-size: larger;
-  border-radius: 7px;
+  border-radius: 5px;
+  padding: 4px;
 }
 
 p {
@@ -82,9 +91,12 @@ button {
   background-color: lightgreen;
   border-radius: 10px;
   padding: 4px;
+  cursor: pointer;
 }
 
 label {
+  display: flex;
   font-size: 20px;
   font-weight: bold;
+  justify-content: left;
 }
