--- a/views/Profile.handlebars
+++ b/views/Profile.handlebars
@@ -19,21 +19,39 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-location">Event Location?</label>
+        <label for="event-desc">Whats Happening?</label>
+        <input
+          class="form-input"
+          type="string"
+          id="event-description"
+          name="event-description"
+        />
+      </div>
+      <div class="form-group">
+        <label for="event-date">When?</label>
+        <textarea
+          class="form-input"
+          id="event-date"
+          name="event-date"
+        ></textarea>
+      </div>
+      <div class="form-group">
+        <label for="event-time">What time?</label>
+        <input
+          class="form-input"
+          type="string"
+          id="event-time"
+          name="event-time"
+        />
+      </div>
+      <div class="form-group">
+        <label for="event-location">Where?</label>
         <input
           class="form-input"
           type="string"
           id="event-location"
           name="event-location"
         />
-      </div>
-      <div class="form-group">
-        <label for="event-desc">Description</label>
-        <textarea
-          class="form-input"
-          id="event-desc"
-          name="event-desc"
-        ></textarea>
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-primary">Create</button>
