--- a/views/Profile.handlebars
+++ b/views/Profile.handlebars
@@ -29,11 +29,11 @@
       </div>
       <div class="form-group">
         <label for="event-date">When?</label>
-        <textarea
+        <input
           class="form-input"
           id="event-date"
           name="event-date"
-        ></textarea>
+        ></input>
       </div>
       <div class="form-group">
         <label for="event-time">What time?</label>
@@ -66,12 +66,12 @@
       {{#each events as |event|}}
         <div class="row mb-2">
           <div class="col-md-8">
-            <h4><a href="/event/{{event.name}}">{{event.location}}</a></h4>
+            <h4><a href="/event/{{name}}">{{location}}</a></h4>
           </div>
           <div class="col-md-4">
             <button
               class="btn btn-sm btn-danger"
-              data-id="{{event.id}}"
+              data-id="{{id}}"
             >DELETE</button>
           </div>
         </div>
