--- a/views/Profile.handlebars
+++ b/views/Profile.handlebars
@@ -7,8 +7,14 @@
 <div class="row mt-4">
   <div class="col-md-6">
     <h3>Share your Event!</h3>
-
-    <form class="form new-event-form">
+{{!-- 
+await fetch("/api/users", {
+      method: "POST",
+      body: JSON.stringify({ name, email, password }),
+      headers: { "Content-Type": "application/json" },
+    });
+ --}}
+    <form class="form new-event-form" action="/api/users">
       <div class="form-group">
         <label for="event-name">Event Name?</label>
         <input
@@ -19,7 +25,7 @@
         />
       </div>
       <div class="form-group">
-        <label for="event-desc">Whats Happening?</label>
+        <label for="event-description">Whats Happening?</label>
         <input
           class="form-input"
           type="string"
@@ -66,7 +72,7 @@
       {{#each events as |event|}}
         <div class="row mb-2">
           <div class="col-md-8">
-            <h4><a href="/event/{{name}}">{{location}}</a></h4>
+            <h4><a href="/api/event/delete/{{id}}">{{id}} - {{name}}</a></h4>
           </div>
           <div class="col-md-4">
             <button
@@ -80,4 +86,5 @@
   {{/if}}
 </div>
 
-<script src="/js/login.js"></script>
+{{!-- ! Using external JS files like this, loses access to server state like session data --}}
+<script src="/js/profile.js"></script>
