--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -14,7 +14,7 @@
   
   </p>
   <p>
-    <button class="btn btn-primary">Attend this Event!</button>
+   <a href="/api/events/attend/{{id}}"></a> <button class="btn btn-primary">Attend this Event!</button> 
   </p>
 </div>
 {{/each}}
