--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,11 +4,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>What Do I Want To Do?</title>
   </head>
   <link rel="stylesheet" href="/css/style.css">
+ <img src="/images/logo.png" class="logo">
   <body>
-    <div class="flex-column justify-space-around">
+    <div class= "flex-column justify-space-around">
+       <video playsinline autoplay muted loop poster = "/images/eventimage.jpeg">
+        <source src="/images/video.mp4" type="video/webm" />
+        <img
+          src="/images/eventimage.jpeg"
+          title="Your browser does not support the video tag"
+        />
+        Your browser does not support the video tag.
+      </video>
       <header class="display-flex justify-space-between align-center p-2">
         <h1>
         <nav>
