--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,45 +3,43 @@
   padding: 0;
   margin: 0;
 }
-.no-button {
-  display: flex;
-  padding: 12px;
-  justify-content: left;
-  cursor: pointer;
-}
-header {
-  padding: 1rem;
-  margin-left: 1rem;
-  text-align: center;
-  font-style: oblique;
-  font-size: 60px;
-  font-family: "Times New Roman", Times, serif;
-}
-
-a {
-  display: none;
-}
 body {
-  background-color: rgb(161, 238, 212);
-  background-size: cover;
-  background-image: linear-gradient(
-    to right,
-    rgba(255, 245, 245, 0),
-    rgb(94, 179, 132)
-  );
-  opacity: 80%;
+  background-color: aquamarine;
 }
-
+/* Video Background */
+video {
+  /* Making the video background size */
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+  /* Video Positioning */
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  z-index: -1;
+}
 h2 {
   padding: 1rem;
   margin-left: 1rem;
   text-align: left;
   font-style: oblique;
   font-size: xx-large;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  text-decoration-line: underline;
+  font-family: fantasy;
+  color: rgb(0, 0, 0);
 }
-
+.header {
+  background-image: url(/images/logo.png);
+  background-attachment: fixed;
+}
+.logo {
+  width: 240px;
+  border-radius: px;
+  border-color: skyblue;
+  background-color: skyblue;
+}
+a {
+  display: none;
+}
 .form-group {
   text-align: left;
   justify-content: center;
@@ -51,52 +49,40 @@ h2 {
   border-radius: 30px;
   margin-top: 5px;
   font-size: 100%;
-  border-color: tomato;
-  padding: 10px;
   margin-left: 5px;
+  width: 220px;
+  height: 65px;
 }
-
 .form-group {
   border-radius: 30px;
   margin-right: 10px;
   text-align: justify;
   padding-left: 70px;
 }
-
 h3 {
   padding-left: 40px;
   font-style: normal;
   font-weight: 600;
   font-size: xx-large;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: fantasy;
 }
-
 .form-input {
-  display: flex;
-  justify-content: center;
   font-size: larger;
-  border-radius: 5px;
-  padding: 4px;
+  border-radius: 7px;
+  width: 220px;
+  height: 40px;
+  padding: 5px;
 }
-
-p {
-  font-size: 20px;
-  font-family: "Times New Roman", Times, serif;
-  padding: 10px;
-}
-
-button {
-  font-size: 15px;
-  font-weight: bold;
-  background-color: lightgreen;
+.btn-primary {
+  color: black;
+  height: 50px;
+  width: 100px;
+  border-color: rgb(0, 0, 6);
+  background-color: transparent;
   border-radius: 10px;
-  padding: 4px;
-  cursor: pointer;
+  margin-top: 10px;
 }
-
-label {
-  display: flex;
-  font-size: 20px;
-  font-weight: bold;
-  justify-content: left;
+.btn-primary:hover {
+  color: black;
+  background-color: tomato;
 }
