--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
             
             <button class="no-button" id="logout">Event List</button>
           {{else}}
-            <a href="/event/events">login</a>
+            <a href="/event/events"></a>
           {{/if}}
         </nav>
       </header>
