--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -1,5 +1,5 @@
 <script>
-    document.write('<a href="' + document.referrer + '">Go Back</a>');
+    document.write('<a href="' + '/profile' + '">Go Back</a>'); // was document.referrer
 </script>
 {{#each events as |event|}}
 
