profile changed to member

--- a/views/member.handlebars
+++ b/views/member.handlebars
@@ -87,4 +87,4 @@ await fetch("/api/users", {
 </div>
 
 {{!-- ! Using external JS files like this, loses access to server state like session data --}}
-<script src="/js/profile.js"></script>
+<script src="/js/member.js"></script>
