fixed login/goback ty vin,jeff,&ant

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -16,7 +16,7 @@
   <p class="modeldata">- {{ formatted_time time}}</p>
   <p class="title">Where?:</p>
   <p class="modeldata">- {{location}}</p>
-  <p>Organized by {{user.name}}</p>
+  <p>Organized by {{user.dataValues.name}}</p>
   
   </p>
   <p>
