--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
           {{#if logged_in}}
             <a href="/event/events"></a>
             
-            <button class="no-button" id="logout">Event List</button>
+            <button class="no-button" id="event-list">Event List</button>
           {{else}}
             <a href="/event/events"></a>
           {{/if}}
